Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongoexpress-ingress-rules
  namespace: default
spec:
  rules:
    - host: mongoexpress-localy.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8081
